Add lightbox to blog posts

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -254,6 +254,7 @@
     href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,400;0,600;1,400&family=Roboto+Mono:wght@400;500;700&display=swap"
     rel="stylesheet"
   />
+  <link rel="stylesheet" href="/css/lightbox.css">
   {% if page.preload %}
     <link rel="preload" href="{{site.baseurl}}/img/{{ page.preload }}" as="image">
   {% endif %}
