--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,5 +20,6 @@
       <script src="https://boards.greenhouse.io/embed/job_board/js?for=skylighthq"></script>
       
     {% endif %}
+    <script type="text/javascript" src="/js/lightbox.js"></script>
   </body>
 </html>
