--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -10,7 +10,7 @@
     research, design, product management, engineering, data science, security,
     procurement, digital transformation, and client engagement management.
     Please don’t hesitate to
-    <a href="mailto:hello@skylight.digital">reach out to us</a>.
+    <a href="mailto:recruiting@skylight.digital">reach out to us</a>.
   </p>
 
   <p>
