--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -23,7 +23,7 @@
 {% endif %}
 
 {% if page.layout =='policy' %}
-{% assign header_width = 'maxw-xlg' %}
+{% assign header_width = 'maxw-md' %}
 {% else %}
 {% assign header_width = 'maxw-md' %}
 {% endif %}
