--- a/_includes/paginated_pages.html
+++ b/_includes/paginated_pages.html
@@ -160,7 +160,7 @@
   {% endfor %}
 
   <div class="row mt-6 pt-4">
-    {% for item in paginator.posts %}
+    {% for item in paginator.posts | where: "featured", false %}
       {% unless item.featured == true %}
         <article class="blog-post-col" id="{{ item.title | slugify }}">
           <div
