--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  {% include head.html %}
+{% include head.html %}
 
-  <body class="page-{% if page.class %}{{ page.class }}{% else %}{{ page.title | slugify }}{% endif %} {% if layout.class %}page-{{ layout.class }}{% endif %} page-{{ page.permalink | slugify }} page-{{ page.url | replace:'/',' ' | truncatewords: 1 | remove:'...' }} {% if page.toolkit_name == "brand" %}page--{{ page.sidenav | slugify }}{% endif %}" data-spy="scroll" data-target="#sidenav" data-offset="10">
-    <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
+<body
+  class="page-{% if page.class %}{{ page.class }}{% else %}{{ page.title | slugify }}{% endif %} {% if layout.class %}page-{{ layout.class }}{% endif %} page-{{ page.permalink | slugify }} page-{{ page.url | replace:'/',' ' | truncatewords: 1 | remove:'...' }} {% if page.toolkit_name == "
+  brand" %}page--{{ page.sidenav | slugify }}{% endif %}" data-spy="scroll" data-target="#sidenav" data-offset="10">
+  <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
 
-    {% include header.html %}
+  {% include header.html %}
 
-    <main id="content" tabindex="-1">
-      {{content}}
-    </main>
+  <main id="content" tabindex="-1">
+    {{content}}
+  </main>
 
-    {% include footer.html %}
+  {% include footer.html %}
 
-    {% include analytics.html %}
-    
-    {% if page.load_greenhouse_script %}
-      <script src="https://boards.greenhouse.io/embed/job_board/js?for=skylighthq"></script>
-      
-    {% endif %}
-    <script type="text/javascript" src="/js/lightbox.js"></script>
-  </body>
+  {% include analytics.html %}
+
+  {% if page.load_greenhouse_script %}
+  <script src="https://boards.greenhouse.io/embed/job_board/js?for=skylighthq"></script>
+  {% endif %}
+  <script type="text/javascript" src="/js/lightbox.js"></script>
+</body>
+
 </html>
