--- a/_sass/_hero.scss
+++ b/_sass/_hero.scss
@@ -125,6 +125,10 @@
   }
 }
 
+.hero-banner-btm {
+  background-position: bottom center;
+}
+
 /* Standard syntax */
 @keyframes herofadein {
   from {
