--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -196,6 +196,18 @@
   background-color: $gray-300;
 }
 
+// Purple
+
+.bg-purple-60,
+.bg-purple-lightest {
+  background-color: $purple-60;
+}
+
+.bg-purple-80,
+.bg-purple-lighter {
+  background-color: $purple-80;
+}
+
 // Text colors
 
 .text-ink {
