--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,7 @@
             <ul>
               <li><a href="/work/services/">Services</a></li>
               <li><a href="/work/experience/">Experience</a></li>
+              <li><a href="/work/solutions/">Solutions</a></li>
               <li><a href="/work/toolkits/">Toolkits</a></li>
               <li><a href="/work/services/service-design/">Service design</a></li>
             </ul>
