--- a/_sass/pages/_gearfit.scss
+++ b/_sass/pages/_gearfit.scss
@@ -36,6 +36,7 @@
 }
 
 .in-page-selection{
+  margin-top: 1em;
   p {
     color: var(--Gray-200, #37383B);
     font-family: Libre Franklin;
@@ -56,25 +57,28 @@
     content: "" !important;
   }
   li.current{
-    color: $blue-200;
+    color: $blue-200 !important;
       cursor: pointer;
       svg{
         path{
-          fill: $blue-200;
+          fill: $blue-200 !important;
         }
       }
+      font-weight: 800 !important;
+  }
+  li.control-list-item{
+    color: var(--Gray-80, #76767B);
+    font-family: Roboto Mono;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.9125rem; /* 1.9125rem */
   }
   li{
     padding-left: 0 !important;
     justify-content: left;
     align-items: center;
     display: flex;
-    color: var(--Gray-80, #76767B);
-    font-family: Roboto Mono;
-    font-size: 1.125rem;
-    font-style: normal;
-    font-weight: 500;
-    line-height: 170%; /* 1.9125rem */
     svg{
       margin-left: .5rem;
       max-width: 100%;
@@ -101,7 +105,28 @@
     display: none;
   }
   img{
-    max-width: 150px;
+    max-width: 80%;
+  }
+  img.mobile-width{
+    max-width: 150px !important;
+  }
+  .page-work-solutions-gear-fit{
+    .accordion-card [data-toggle="collapse"][aria-expanded="true"]{
+      h3{
+        color: #2F44B1;
+      }
+    }
+    .accordion-card{
+      img{
+        margin-bottom: 1em;
+      }
+    }
+    .accordion-header{
+      margin: .5em 0em !important;
+      h3{
+        font-family: Roboto Mono !important;
+      }
+    }
   }
 }
 @media (min-width: 769px){
