--- a/_includes/in_page_select.html
+++ b/_includes/in_page_select.html
@@ -26,7 +26,9 @@
       </div>
       {% if section.image %}
         <div class="col-md-3 controlled-item {% unless forloop.first%}hidden{% endunless %}" data-id="{{section.name}}">
-          <img src="{{ site.baseurl }}{{section.image}}" alt="" />
+          <div class="m0 p0" style="display: flex; height: 100%; width: 100%;">
+            <img src="{{ site.baseurl }}{{section.image}}" alt="" />
+          </div>
         </div>
       {% endif %}
     {% endfor %}
