--- a/_includes/in_page_select.html
+++ b/_includes/in_page_select.html
@@ -1,6 +1,6 @@
 <div class="in-page-selection">
   <div class="row">
-    <div class="col-md-4">
+    <div class="{% if include.sections[0].image %}col-md-4{% else %} col-md-5 {%endif%}">
       <ul>
         {% for section in include.sections %}
           <li
@@ -20,7 +20,7 @@
       </ul>
     </div>
     {% for section in include.sections %}
-      <div class="{% if section.image %}col-md-5{% else %} col-md-8 {%endif%} controlled-item {% unless forloop.first%}hidden{% endunless %}" data-id="{{section.name}}">
+      <div class="{% if section.image %}col-md-5{% else %} col-md-7 {%endif%} controlled-item {% unless forloop.first%}hidden{% endunless %}" data-id="{{section.name}}">
         <h4 class="controlled-heading">{{ section.heading }}</h4>
         {{ section.body }}
       </div>
